# zush

./: README.md  pyproject.toml
.github/workflows/: publish.yml
.zhar/: facts.json
.zhar/mem/: architecture_context.json  code_history.json  decision_trail.json  notes.json  problem_tracking.json  project_dna.json
docs/: configuration.md  cron.md  embedding.md  extension-management.md  plugins.md  runtime-and-services.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
playground/: README.md
playground/zush_deep_demo/: __zush__.py
playground/zush_demo/: __zush__.py
playground/zush_hooks_demo/: __zush__.py
playground/zush_provider_service_demo/: __zush__.py
src/zush/: __init__.py  __main__.py  cache.py  config.py  context.py  discovery.py  envs.py  group.py  paths.py  persistence.py  plugin.py  plugin_loader.py  runtime.py  services.py
src/zush/core/: __init__.py  (+13 more)
tests/: conftest.py  playground_helpers.py  test_cache.py  test_config.py  test_context.py  test_cron.py  test_cron_lifejobs.py  test_cron_runtime_helpers.py  test_cron_single_day_complete.py  test_cron_start_integration.py  test_discovery.py  test_envs.py  test_factory.py  test_group.py  test_group_cron_lifejobs.py  test_group_cron_single_day_complete.py  test_paths.py  test_persistence.py  test_playground_applewood.py  test_playground_deep.py  test_playground_hooks.py  test_playground_provider_service.py  test_plugin_helper.py  test_plugin_loader.py  test_runtime.py  test_services.py  test_services_flask.py  test_utils.py
(+29 files in other folders)
