[project]
name = "zush"
version = "0.4.2"
description = "Zush is a CLI framework for building nested CLI applications."
readme = "README.md"
authors = [
    { name = "ZackaryW", email = "36378555+ZackaryW@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "croniter>=3.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "Flask>=3.0",
    "httpcore>=1.0",
    "httpx>=0.27",
    "pytest>=8.0",
]

[project.scripts]
zush = "zush:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
